Display certificate & overlay, capture name for certificate

--- a/.gitignore
+++ b/.gitignore
@@ -72,17 +72,9 @@ typings/
 # next.js build output
 .next
 
-# nuxt.js build output
-.nuxt
-
-# vuepress build output
-.vuepress/dist
+# IntelliJ Idea dir
+.idea/
 
 # Serverless directories
 .serverless/
 
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
